--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
-    "express": "^4.19.2",
+    "express": "^4.21.0",
+    "firebase-admin": "^12.6.0",
     "hbs": "^4.2.0",
     "mongoose": "^8.6.1",
     "nodemon": "^3.1.7",
