--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "express": "^4.21.0",
+    "express-session": "^1.18.0",
     "firebase": "^10.14.0",
     "firebase-admin": "^12.6.0",
+    "git-filter-repo": "^0.0.30",
     "hbs": "^4.2.0",
     "mongoose": "^8.6.1",
     "nodemon": "^3.1.7",
